a1/brendan_gordon/TEST_PROGRAMS/invalidtype/yanis_hattab/invalid3.min
#float as if condition type error

var x : int;
var y : float;

y = 23.5;

if (y) then
	x = 2;
endif



